# holograms.media

./: .dockerignore  .env.example  .firebaserc  .gitignore  @PROJECT_CONTEXT.md  @tria_memory_buffer.md  ARCHITECTURE.md  DOC_UPDATE_PLAN.md  Dockerfile  FUTUREARCHITECTURE.md  Jenkinsfile  LICENSE  MODULE_CATALOG.md  MODULE_INTERFACES.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  TESTING_STRATEGY.md  analyze_imports.py  app.py  app_config.json  audit_report.md  backend_final_verification.txt  backend_import_analysis.json  cloudbuild.yaml  eslint.config.mjs  firebase.json  frontend_bug_hunt_report.md  frontend_fixes.patch  frontend_other_import_analysis.json  generated_prompts.md  genkit.config.ts  import_discrepancies.json  model_manifesto.json  oldscriptjs.md  package-lock.json  package.json  requirements.txt  script.js  storage.rules  (+4 more)
.firebase/: hosting.ZnJvbnRlbmQ.cache
.husky/: commit-msg  pre-commit
.idx/: dev.nix
aider_config/: aider_config.sh
backend/: .gitignore  DOCKERFILE  README.md  app.py  backend.py  backend.py.backup  backend.py.save  backend_refactored.py  check_env_var.py  config.py  execute_sql.py  main.py  minimal_fastapi_test.py  requirements.txt  requirements_render.txt  test_endpoint.py  test_gemini.py  test_python.py
config/: aider_settings.sh
config_examples/: cloudrun.example.yaml
docs/: GLOSSARY.md  README.md  SYSTEM_INSTRUCTION_CURRENT.md  WHITEGHOST.md  glossary.md
front1end/: style.css
frontend/: LICENSE  README.md  chatMessages.js  combined_gesture_styles_block2_3.css  combined_styles_guide.css  gesture_area_styles.css  gesture_recording_styles.css  gesture_visualization_styles.css  gestures_list_styles.css  index.html  index.html.bak  manifest.json  robots.txt  script.js  script.js.backup  script.js.bak  script.txt  sitemap.xml  style.css  sw.js  tria_mode.js  version_timeline_styles.css  vite.config.js  webgpu_test.html
frontend/js/wasm/src/audio_analyzer_rs/: Cargo.toml
frontend/js/wasm/src/audio_analyzer_rs/src/: lib.rs
frontend/js/wasm/src/physics_engine_cpp/: CMakeLists.txt
frontend/js/wasm/src/physics_engine_cpp/src/: main.cpp
holograph/: README.md
nethologlyph/: README.md
research/: README.md
sample_data/: .gitkeep  tria_knowledge_graph_store.jsonl
scripts/: __init__.py  generate_sample_data.py  run_tests.sh  set_user_role.py  verify_imports.py
tests/: __init__.py
tools/: .gitkeep  db_init.sh  proto_compile.sh
tria-genkit-core/: .gitkeep  create_embeddings.js  embeddings_database.json  genkit.config.ts  package-lock.json  (+2 more)
(+466 files in other folders)
