# File: frontend/js/wasm/src/physics_engine_cpp/CMakeLists.txt
# Purpose: CMake configuration for building the C++ physics engine to WASM.
# Key Future Dependencies: Emscripten toolchain file.
# Main Future Exports/API: N/A (build configuration).
# Link to Legacy Logic (if applicable): N/A.
# Intended Technology Stack: C++, CMake, Emscripten.
# TODO: Define project and add executable/library target.
# TODO: Link against Emscripten libraries.
# TODO: Set compiler flags for WASM output.

cmake_minimum_required(VERSION 3.10)
project(PhysicsEngineCPP)

# Ensure Emscripten toolchain is used (usually passed via CMAKE_TOOLCHAIN_FILE)
# Example: cmake -DCMAKE_TOOLCHAIN_FILE=/path/to/emscripten/cmake/Modules/Platform/Emscripten.cmake ...

add_executable(physics_engine src/main.cpp)

# Example of setting Emscripten specific flags (might vary based on setup)
# set_target_properties(physics_engine PROPERTIES SUFFIX ".js")
# target_link_options(physics_engine PUBLIC "-s WASM=1 -s EXPORTED_FUNCTIONS=['_greet_cpp','_add_floats_cpp'] -s EXPORTED_RUNTIME_METHODS=['ccall','cwrap']")

# TODO: Add more detailed Emscripten build settings
